--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>ONEX ONE MEMBER PLC - Ethical and Sustainable Gemstone Sourcing & Sales</title>
     <meta name="description" content="ONEX ONE MEMBER PLC specializes in the global sale of high-quality, ethically sourced gemstones. We are committed to sustainable mining practices, premium quality, and responsible sourcing. Explore our wide range of ethically mined gemstones today" />
     <meta name="author" content="ONEX ONE MEMBER PLC" />
-    <meta property="og:image" content="/lovable-uploads/7dfc8040-6c6a-46c8-8fd8-28616706a2d0.png" />
-    <link rel="icon" type="image/png" href="/lovable-uploads/7dfc8040-6c6a-46c8-8fd8-28616706a2d0.png" />
+    <meta property="og:image" content="/lovable-uploads/Screenshot 2025-03-17 175811.png" />
+    <link rel="icon" type="image/png" href="/lovable-uploads/Screenshot 2025-03-17 175811.png" />
   </head>
 
   <body>
